kubernetes/clusters/prod/03-core/monitoring/ntfy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy-deployment
  namespace: monitoring
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: ntfy-pod
  template:
    metadata:
      labels:
        app: ntfy-pod
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        runAsNonRoot: true
      containers:
        - name: ntfy 
          image: binwiederhier/ntfy:v2.15.0
          args: ["serve"]
          ports: 
            - containerPort: 80
              name: http-ntfy
          resources:
            limits:
              memory: 300Mi
              cpu:  200m
            requests:
                  cpu: 150m
                  memory: 150Mi
          volumeMounts:
              - mountPath: /etc/ntfy
                subPath: server.yml
                name: config-volume
              - mountPath: /var/cache/ntfy
                name: cache-volume
      volumes:
        - name: config-volume
          configMap:
            name: server-config
        - name: cache-volume
          persistentVolumeClaim:
            claimName: ntfy-data-pvc
