kubernetes/clusters/prod/03-core/monitoring/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy-svc
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: ntfy-pod
  ports:
    - name: http-ntfy-out
      protocol: TCP
      port: 80
      targetPort:  http-ntfy
