kubernetes/clusters/prod/03-core/monitoring/ntfy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy-ingress
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
  - host: ntfy.sluxcloud.com
    http:
      paths:
      - backend:
          service:
            name: ntfy-svc
            port:
              number: 80
        path: /
        pathType: Prefix
